# embedding-search

./: .appveyor.yml  CMakeLists.txt  README.md  constants.h  distance_metric.h  embedding_store.h  setup.py  test.cpp  utils.h
.github/workflows/: conda.yml
conda.recipe/: meta.yaml
research/: spacy_benchmark.ipynb
src/: CMakeLists.txt  constants.h  distance_metric.h  embedding_store.h  file_wrapper.h  hybrid_metric.h  inverted_index.h  inverted_index_utils.h  main.cpp  test.cpp  test_hybrid_search.cpp  test_integration.cpp  test_inverted_index.cpp  test_utils.h  utils.h
tests/: test_multi_thread.py
